--- a/index.html
+++ b/index.html
@@ -10,35 +10,29 @@
 <body>
 
     <h1>Suel Çakmak</h1>
-
     <img src="/img/suelcakmak.PNG" alt="Suel Çakmak" title="Suel Çakmak" width="200">
-
     <br>
-    <a href="mailto:suelcakmak@gmail.com">Benimle İletişime Geçin | Contact Me</a>
+    <a href="mailto:suelcakmak@gmail.com">
+        Benimle İletişime Geçin | Contact Me
+    </a>
     <br>
-    <a href="https://www.linkedin.com/in/suel-%C3%A7akmak-7974461aa/" target="_blank">LinkedIn</a>
+    <a href="https://www.linkedin.com/in/suel-%C3%A7akmak-7974461aa/" target="_blank">
+        LinkedIn
+    </a>
 
     <!--bu kısım türkçe hakkımda içeriği-->
     <h3>TR</h3>
-
     <h2>Hakkımda</h2>
-
     <p>Merhaba ben Suel Çakmak! 2023 yılında Kırklareli Üniversitesi Mimarlık Fakültesinden mimar olarak mezun oldum. Bir süredir ilgi duyduğum UI Design ve Frontend Development alanlarında kendimi geliştirmek üzere çalışmalar yapıyorum. Bu çalışma ise Kodluyoruz aracılığıyla aldığım Başlangıç Seviye Frontend Web Development Patikası'na ait HTML dersinin ilk çıktısı olarak hazırlandı. </p>
-
     <br>
-
     <!-- bu kısım ingilizce hakkımda içeriği -->
     <h3>EN</h3>
-
     <h2>About Me</h2>
-
     <p>Hi! I'm Suel Çakmak. I graduated from the Faculty of Architecture at Kirklareli University as an architect in 2023. For a while, I have been working on UI Design and Frontend Development to improve myself. This is my first HTML project for Beginner Level Frontend Web Development Pathway at Kodluyoruz. </p>
-
 
     <br>
 
     <h2>Yetenekler | Skills</h2>
-
     <ol>
         <li>HTML</li>
         <li>Figma</li>
